# StayWise-CloudProject

./: Procfile  db.sqlite3  deploy_lambda.sh  manage.py  requirement.txt  requirements.txt
.ebextensions/: django.config
.github/workflows/: deploy.yml
.platform/hooks/postdeploy/: 01_collectstatic.sh
accommodation/: admin.py  api_auth_views.py  apps.py  aws_utils.py  dynamo_rooms.py  dynamo_users.py  dynamodb_helper.py  forms.py  middleware.py  migrate_existing_users_to_dynamo.py  models.py  urls.py  views.py
accommodation/migrations/: 0001_initial.py
accommodation/templates/accommodation/: add_room.html  base.html  book_room.html  booking_success.html  discount_ticker.html  edit_room.html  email_booking.html  manager_base.html  manager_dashboard.html  my_bookings.html  room_full.html  room_list.html
accounts/: middleware.py  urls.py  views.py
accounts/session_backends/: customer_session.py  manager_session.py
accounts/templates/accounts/: login.html  register.html
aws_setup/: aws_resource_setup.py  lambda_setup.py
lambda_functions/staywiseSQSProcessor/: lambda_function.py
smarthost/: asgi.py  customer_backend.py  manager_backend.py  settings.py  urls.py  wsgi.py
staywiselib_pkg/: README.md  pyproject.toml
staywiselib_pkg/src/staywiselib/: pricing.py
