[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "staywise-discountlib"
version = "0.0.2"
authors = [
    { name="Shridharan M", email="your.email@example.com" },
]
description = "A reusable library for StayWise project with festival, weekend, and long-stay discount logic."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/staywiselib"]
